Attempt to fix display issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -274,6 +274,9 @@ justify-content: center;
         max-width: 300px;
         max-height: 300px;
     }
+    #results-list {
+        display: block;
+    }
     .result-display {
         flex: 1;
     }
